Created informational websites page.

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
                         <li> Anual website maintance: $300 - $600 </li>
                     </ul>
                 </div>
+                <a class="example" href="informational-websites"> Examples </a>
             </div>
             <div class="offer" id="advanced-websites">
                 <h1> Advanced Web Apps </h1>
