Designed contact form and scrollbar.

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 							<img id="img2" src="img/programming2.jpg"></img>
 							<div class="initial_text">
 								<div class="hi">Hi, I'm Carlos.</div>
-								<div class="typewrite" data-period="2000" data-type='[ "A software developer.", "A web developer.", "An Android developer.", "A desktop developer.", "A web designer.", "A UI designer.", "A UX designer.", "A C developer.", "A Java developer.", "A Python developer.", "A PHP developer.", "A JavaScript developer.", "A full-stack developer."]'>
+								<div class="typewrite" data-period="2000" data-type='[ "A full-stack developer.", "A software developer.", "A web developer.", "An Android developer.", "A desktop developer.", "A web designer.", "A UI designer.", "A UX designer.", "A C developer.", "A Java developer.", "A Python developer.", "A PHP developer.", "A JavaScript developer."]'>
 									<span class="wrap"></span>
 								</div>
 							</div>
@@ -68,7 +68,7 @@
 							<div class="text">
 								I'm Carlos, a full-stack developer from Portugal. <br></br>
 								I learned mostly by myself. <br></br>
-								I started programming just some years ago but, I've already learned a lot.
+								I started programming just some years ago, but I've already learned a lot.
 							</div>
 						</div>
 					);
@@ -84,10 +84,12 @@
 								I'm open for questions.<br></br>
 								If you are interested in working with me, don't hesitate to contact.
 							</div>
-							<input type="email" placeholder="Your email"></input><br></br>
-							<textarea placeholder="Your message">
-							</textarea><br></br><br></br>
-							<button onclick="send()"> Send </button>
+							<div class="form">
+								<input type="email" placeholder="Your email"></input><br></br>
+								<textarea placeholder="Your message">
+								</textarea><br></br><br></br>
+								<button onclick="send()"> Send </button>
+							</div>
 						</div>
 					);
 				}
