--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <!-- 
-    Copyright (c) Carlos Tojal (carlostojal) 2019
+    Copyright (c) Carlos Tojal 2019
     carlostojal-dev
     github.com/carlostojal
 -->
@@ -105,7 +105,6 @@
                     );
                 }
             }
-
 
 			function App() {
 				return(
