--- a/pt/index.html
+++ b/pt/index.html
@@ -52,7 +52,7 @@
             <h1 class="subtitle"> Contacte-me </h1>
             <div class="text">
                 Estou aberto a questões. <br>
-                Se estiver interessado em trabalhar comigo, não hesite em contactar-me.
+                Não hesite em contactar-me.
             </div>
             <div class="form">
                 <input type="email" placeholder="Email"></input><br>
@@ -61,12 +61,12 @@
             </div>
         </div>
         <footer>
-            Developed by Carlos Tojal 2019 <br><br>
-            <a href="https://github.com/carlostojal" target="_blank"><img src="../img/github.png"></a>
-            <a href="https://facebook.com/carlos.tojal" target="_blank"><img src="../img/facebook.png"></a>
-            <a href="https://instagram.com/carlostojal_dev" target="_blank"><img src="../img/instagram.png"></a>
+            Developed by Carlos Tojal 2019
+            <a href="https://reddit.com/u/carlostojal" target="_blank"><img src="../img/reddit.png"></a>
             <a href="https://twitter.com/CarlosTojal" target="_blank"><img src="../img/twitter.png"></a>
-            <a href="https://reddit.com/u/carlostojal" target="_blank"><img src="../img/reddit.png"></a><br><br>
+            <a href="https://instagram.com/carlostojal_dev" target="_blank"><img src="../img/instagram.png"></a>
+            <a href="https://facebook.com/carlos.tojal" target="_blank"><img src="../img/facebook.png"></a>
+            <a href="https://github.com/carlostojal" target="_blank"><img src="../img/github.png"></a><br>
             All rights reserved.
         </footer>
     <script>
