--- a/index.html
+++ b/index.html
@@ -25,6 +25,15 @@ $$       |$$    $$ |$$ |      $$ |$$    $$/ /     $$/   $$  $$/ $$    $$/    $$ 
 
 <html>
     <head>
+        <!-- Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-153707554-1"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+
+            gtag('config', 'UA-153707554-1');
+        </script>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta name="theme-color" content="#2b2b2b"/>
@@ -41,7 +50,6 @@ $$       |$$    $$ |$$ |      $$ |$$    $$/ /     $$/   $$  $$/ $$    $$/    $$ 
                 <a href="#"> Home </a>
                 <a href="#about-me"> About me </a>
                 <a href="#contact-me"> Contact me </a>
-                <a href="pt"> PT </a>
             </nav>
         </header>
         <div class="start">
@@ -94,6 +102,7 @@ $$       |$$    $$ |$$ |      $$ |$$    $$/ /     $$/   $$  $$/ $$    $$/    $$ 
             window.location.href = "pt";
         
         function send() {
+
             var email = document.getElementById("email").value;
             var name = document.getElementById("name").value;
             var subject = document.getElementById("subject").value;
