--- a/pt/index.html
+++ b/pt/index.html
@@ -25,6 +25,15 @@ $$       |$$    $$ |$$ |      $$ |$$    $$/ /     $$/   $$  $$/ $$    $$/    $$ 
 
 <html>
     <head>
+        <!-- Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-153707554-1"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+
+            gtag('config', 'UA-153707554-1');
+        </script>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta name="theme-color" content="#2b2b2b"/>
@@ -41,14 +50,13 @@ $$       |$$    $$ |$$ |      $$ |$$    $$/ /     $$/   $$  $$/ $$    $$/    $$ 
                 <a href="#"> Início </a>
                 <a href="#about-me"> Sobre mim </a>
                 <a href="#contact-me"> Contacte-me </a>
-                <a href=".."> EN </a>
             </nav>
         </header>
         <div class="start">
             <img id="img1" src="../img/programming1.jpg"></img>
             <img id="img2" src="../img/programming2.jpg"></img>
             <div class="initial_text">
-                <div class="hi">Olá, sou o Carlos.</div>
+                <div class="hi">Olá, chamo-me Carlos.</div>
                 <div class="typewrite" data-period="2000" data-type='[ "Um desenvolvedor full-stack.", "Um desenvolvedor de software.", "Um desenvolvedor web.", "Um desenvolvedor Android.", "Um desenvolvedor desktop.", "Um designer web.", "Um designer de UI.", "Um designer de UX.", "Um desenvolvedor de C.", "Um desenvolvedor de Java.", "Um desenvolvedor de Python.", "Um desenvolvedor de PHP.", "Um desenvolvedor de JavaScript."]'>
                     <span class="wrap"></span>
                 </div>
@@ -57,7 +65,7 @@ $$       |$$    $$ |$$ |      $$ |$$    $$/ /     $$/   $$  $$/ $$    $$/    $$ 
         <div id="about-me" class="section">
             <h1 class="subtitle"> Quem sou eu? </h1>
             <div class="text">
-                Sou o Carlos, um desenvolvedor full-stack de Portugal. <br>
+                Chamo-me Carlos e sou um desenvolvedor full-stack de Portugal. <br>
                 Tenho 16 anos e estou atualmente no 2º ano do curso de Gestão e Programação de Sistemas Informáticos. <br>
                 O curso já me deu a oportunidade de obter alguns conhecimentos na área do desenvolvimento de software e websites, mas além disso gosto de aprender por mim mesmo, mantendo-me o mais atualizado que consigo no universo da tecnologia, que está em constante evolução.
             </div>
@@ -94,6 +102,7 @@ $$       |$$    $$ |$$ |      $$ |$$    $$/ /     $$/   $$  $$/ $$    $$/    $$ 
             window.location.href = "..";
 
         function send() {
+
             var email = document.getElementById("email").value;
             var name = document.getElementById("name").value;
             var subject = document.getElementById("subject").value;
